fix: refine article layout and align search bar

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -3,20 +3,24 @@
   /*
   * The article grid is defined this way to optimize readability:
   * Free space | Content | Sidebar
-  * 8%         | 75%     | 17%
+  * 10%        | 70%     | 20%
   */
+  width: 90%;
+  margin: 0 auto;
+
   @include desktop {
-    flex: 1 0 75%;
-    max-width: 75%;
+    flex: 1 0 70%;
+    max-width: 70%;
     min-width: 640px;
     padding: 0 30px;
+    width: auto;
   }
 
   flex: 1 0 auto; //Explicit values needed whith flex-direction: column for IE11
 
   &-container {
     @include desktop {
-      flex-direction: row-reverse;
+      flex-direction: row;
     }
 
     display: flex;
@@ -115,18 +119,22 @@
   }
 
   &-sidebar {
+    display: none;
+    padding: 0;
+
     @include desktop {
+      display: block;
       border: 0;
-      flex: 0 0 17%;
+      flex: 0 0 20%;
       height: auto;
-      max-width: 17%;
+      max-width: 20%;
+      margin-bottom: 0;
     }
 
     border-bottom: 1px solid $low-contrast-border-color;
     border-top: 1px solid $low-contrast-border-color;
     flex: 1 0 auto; //Explicit values needed whith flex-direction: column for IE11
     margin-bottom: 20px;
-    padding: 0;
   }
 
   &-relatives {
